--- a/package.json
+++ b/package.json
@@ -1,15 +1,21 @@
 {
-  "name": "blockbuilder",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start"
-  },
-  "dependencies": {
-    "next": "10.0.2",
-    "react": "17.0.1",
-    "react-dom": "17.0.1"
-  }
+    "name": "blockbuilder",
+    "version": "0.1.0",
+    "private": true,
+    "scripts": {
+        "dev": "next dev",
+        "build": "next build",
+        "start": "next start"
+    },
+    "dependencies": {
+        "next": "10.0.2",
+        "react": "17.0.1",
+        "react-dom": "17.0.1"
+    },
+    "devDependencies": {
+        "postcss": "^8.1.8",
+        "postcss-preset-env": "^6.7.0",
+        "prettier": "^2.1.2",
+        "tailwindcss": "^2.0.1"
+    }
 }
