--- a/package.json
+++ b/package.json
@@ -8,9 +8,14 @@
         "start": "next start"
     },
     "dependencies": {
+        "find-and": "^1.3.0",
         "next": "10.0.2",
         "react": "17.0.1",
-        "react-dom": "17.0.1"
+        "react-dom": "17.0.1",
+        "react-redux": "^7.2.2",
+        "react-smooth-dnd": "^0.11.1",
+        "react-trix-rte": "^1.0.5",
+        "redux": "^4.0.5"
     },
     "devDependencies": {
         "postcss": "^8.1.8",
