--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
         "react-redux": "^7.2.2",
         "react-smooth-dnd": "^0.11.1",
         "react-trix-rte": "^1.0.5",
-        "redux": "^4.0.5"
+        "redux": "^4.0.5",
+        "uuid": "^8.3.1"
     },
     "devDependencies": {
         "postcss": "^8.1.8",
