--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "react-dom": "17.0.1",
         "react-redux": "^7.2.2",
         "react-smooth-dnd": "^0.11.1",
+        "react-trix": "^0.7.0",
         "react-trix-rte": "^1.0.5",
         "redux": "^4.0.5",
         "uuid": "^8.3.1"
