--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "next-on-netlify": "^2.6.3",
         "react": "17.0.1",
         "react-dom": "17.0.1",
+        "react-feather": "^2.0.9",
         "react-redux": "^7.2.2",
         "react-smooth-dnd": "^0.11.1",
         "react-trix": "^0.7.0",
