--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
         "react-smooth-dnd": "^0.11.1",
         "react-trix": "^0.7.0",
         "redux": "^4.0.5",
+        "slate": "^0.59.0",
+        "slate-react": "^0.59.0",
         "uuid": "^8.3.1"
     },
     "devDependencies": {
