--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     },
     "dependencies": {
         "find-and": "^1.3.0",
+        "is-url": "^1.2.4",
         "next": "10.0.2",
         "next-on-netlify": "^2.6.3",
         "react": "17.0.1",
@@ -20,6 +21,7 @@
         "react-trix": "^0.7.0",
         "redux": "^4.0.5",
         "slate": "^0.59.0",
+        "slate-history": "^0.59.0",
         "slate-react": "^0.59.0",
         "uuid": "^8.3.1"
     },
