--- a/package.json
+++ b/package.json
@@ -8,10 +8,13 @@
         "start": "next start"
     },
     "dependencies": {
+        "@editorjs/editorjs": "^2.19.1",
+        "@editorjs/paragraph": "^2.8.0",
         "find-and": "^1.3.0",
         "next": "10.0.2",
         "react": "17.0.1",
         "react-dom": "17.0.1",
+        "react-editor-js": "^1.7.0",
         "react-redux": "^7.2.2",
         "react-smooth-dnd": "^0.11.1",
         "react-trix-rte": "^1.0.5",
