--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     },
     "dependencies": {
         "find-and": "^1.3.0",
+        "firebase": "^8.2.1",
         "is-url": "^1.2.4",
         "next": "10.0.2",
         "next-on-netlify": "^2.6.3",
