--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
         "uuid": "^8.3.1"
     },
     "devDependencies": {
+        "@netlify/plugin-nextjs": "^1.0.5",
         "postcss": "^8.1.8",
         "postcss-preset-env": "^6.7.0",
         "prettier": "^2.1.2",
