--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     },
     "dependencies": {
         "find-and": "^1.3.0",
-        "firebase": "^8.2.1",
+        "firebase": "^8.2.2",
+        "firebase-admin": "^9.4.2",
         "is-url": "^1.2.4",
         "next": "10.0.2",
         "next-on-netlify": "^2.6.3",
