--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
         "postbuild": "next-on-netlify"
     },
     "dependencies": {
+        "common-tags": "^1.8.0",
         "find-and": "^1.3.0",
         "firebase": "^8.2.2",
         "firebase-admin": "^9.4.2",
