--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
     "scripts": {
         "dev": "next dev",
         "build": "next build",
-        "start": "next start",
-        "postbuild": "next-on-netlify"
+        "start": "next start"
     },
     "dependencies": {
         "common-tags": "^1.8.0",
@@ -29,7 +28,6 @@
         "uuid": "^8.3.1"
     },
     "devDependencies": {
-        "@netlify/plugin-nextjs": "^1.0.5",
         "postcss": "^8.1.8",
         "postcss-preset-env": "^6.7.0",
         "prettier": "^2.1.2",
