--- a/package.json
+++ b/package.json
@@ -4,14 +4,13 @@
     "private": true,
     "scripts": {
         "dev": "next dev",
-        "build": "next build",
+        "build": "next build && next export",
         "start": "next start"
     },
     "dependencies": {
         "common-tags": "^1.8.0",
         "find-and": "^1.3.0",
         "firebase": "^8.2.2",
-        "firebase-admin": "^9.4.2",
         "is-url": "^1.2.4",
         "next": "10.0.2",
         "next-on-netlify": "^2.6.3",
