--- a/jsconfig.json
+++ b/jsconfig.json
@@ -8,5 +8,6 @@
             "@/styles/*": ["src/styles/*"],
             "@/src/*": ["src/*"]
         }
-    }
+    },
+    "exclude": ["node_modules", "dist"]
 }
