--- a/package.json
+++ b/package.json
@@ -3,17 +3,16 @@
     "version": "0.1.0",
     "private": true,
     "scripts": {
-        "dev": "next dev",
-        "build": "next build && next export",
-        "start": "next start"
+        "clean": "rm dist/bundle.js",
+        "dev": "webpack serve --progress --watch --config webpack.config.js",
+        "build-dev": "webpack --mode development",
+        "build-prod": "webpack --mode production"
     },
     "dependencies": {
         "common-tags": "^1.8.0",
         "find-and": "^1.3.0",
         "firebase": "^8.2.2",
         "is-url": "^1.2.4",
-        "next": "10.0.2",
-        "next-on-netlify": "^2.6.3",
         "react": "17.0.1",
         "react-dom": "17.0.1",
         "react-feather": "^2.0.9",
@@ -27,9 +26,20 @@
         "uuid": "^8.3.1"
     },
     "devDependencies": {
+        "@babel/core": "^7.12.10",
+        "@babel/preset-env": "^7.12.11",
+        "@babel/preset-react": "^7.12.10",
+        "autoprefixer": "^10.2.1",
+        "babel-loader": "^8.2.2",
+        "css-loader": "^5.0.1",
         "postcss": "^8.1.8",
+        "postcss-loader": "^4.1.0",
         "postcss-preset-env": "^6.7.0",
         "prettier": "^2.1.2",
-        "tailwindcss": "^2.0.1"
+        "style-loader": "^2.0.0",
+        "tailwindcss": "^2.0.1",
+        "webpack": "^5.12.2",
+        "webpack-cli": "^4.3.1",
+        "webpack-dev-server": "^3.11.1"
     }
 }
