--- a/.babelrc
+++ b/.babelrc
@@ -3,9 +3,12 @@
         [
             "@babel/preset-env",
             {
-                "modules": false
+                "targets": {
+                    "browsers": ["last 2 versions"]
+                }
             }
         ],
         "@babel/preset-react"
-    ]
+    ],
+    "plugins": ["@babel/plugin-transform-runtime"]
 }
