--- a/package.json
+++ b/package.json
@@ -4,11 +4,16 @@
     "private": true,
     "scripts": {
         "clean": "rm dist/bundle.js",
-        "dev": "webpack serve --progress --watch --config webpack.config.js",
+        "dev": "webpack-cli serve --mode development",
         "build-dev": "webpack --mode development",
         "build-prod": "webpack --mode production"
     },
+    "browserslist": [
+        "> 1%",
+        "last 2 versions"
+    ],
     "dependencies": {
+        "@reach/router": "^1.3.4",
         "common-tags": "^1.8.0",
         "find-and": "^1.3.0",
         "firebase": "^8.2.2",
@@ -27,11 +32,16 @@
     },
     "devDependencies": {
         "@babel/core": "^7.12.10",
+        "@babel/plugin-transform-runtime": "^7.12.10",
+        "@babel/polyfill": "^7.12.1",
         "@babel/preset-env": "^7.12.11",
         "@babel/preset-react": "^7.12.10",
         "autoprefixer": "^10.2.1",
         "babel-loader": "^8.2.2",
+        "copy-webpack-plugin": "^7.0.0",
         "css-loader": "^5.0.1",
+        "html-webpack-plugin": "^4.5.1",
+        "mini-css-extract-plugin": "^1.3.3",
         "postcss": "^8.1.8",
         "postcss-loader": "^4.1.0",
         "postcss-preset-env": "^6.7.0",
