--- a/.babelrc
+++ b/.babelrc
@@ -1,14 +1,4 @@
 {
-    "presets": [
-        [
-            "@babel/preset-env",
-            {
-                "targets": {
-                    "browsers": ["last 2 versions"]
-                }
-            }
-        ],
-        "@babel/preset-react"
-    ],
-    "plugins": ["@babel/plugin-transform-runtime"]
+    "presets": ["@babel/preset-env", "@babel/preset-react"],
+    "plugins": ["@babel/transform-runtime"]
 }
