--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "private": true,
     "scripts": {
         "clean": "rm dist/bundle.js",
-        "dev": "webpack-cli serve --mode development",
+        "dev": "webpack serve --progress",
         "build-dev": "webpack --mode development",
         "build-prod": "webpack --mode production"
     },
@@ -38,6 +38,7 @@
         "@babel/preset-react": "^7.12.10",
         "autoprefixer": "^10.2.1",
         "babel-loader": "^8.2.2",
+        "clean-webpack-plugin": "^3.0.0",
         "copy-webpack-plugin": "^7.0.0",
         "css-loader": "^5.0.1",
         "html-webpack-plugin": "^4.5.1",
