--- a/package.json
+++ b/package.json
@@ -1,41 +1,59 @@
 {
-  "name": "block-builder-delete-me",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "@testing-library/jest-dom": "^5.11.8",
-    "@testing-library/react": "^11.2.3",
-    "@testing-library/user-event": "^12.6.0",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
-    "react-scripts": "4.0.1",
-    "web-vitals": "^0.2.4"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  },
-  "devDependencies": {
-    "prettier": "^2.2.1"
-  }
+    "name": "block-builder-delete-me",
+    "version": "0.1.0",
+    "private": true,
+    "scripts": {
+        "start": "craco start",
+        "build": "craco build",
+        "test": "craco test",
+        "eject": "react-scripts eject"
+    },
+    "dependencies": {
+        "@craco/craco": "^6.0.0",
+        "@reach/router": "^1.3.4",
+        "@testing-library/jest-dom": "^5.11.8",
+        "@testing-library/react": "^11.2.3",
+        "@testing-library/user-event": "^12.6.0",
+        "common-tags": "^1.8.0",
+        "find-and": "^1.3.0",
+        "firebase": "^8.2.2",
+        "is-url": "^1.2.4",
+        "react": "^17.0.1",
+        "react-dom": "^17.0.1",
+        "react-feather": "^2.0.9",
+        "react-redux": "^7.2.2",
+        "react-scripts": "4.0.1",
+        "react-smooth-dnd": "^0.11.1",
+        "redux": "^4.0.5",
+        "slate": "^0.59.0",
+        "slate-history": "^0.59.0",
+        "slate-react": "^0.59.0",
+        "uuid": "^8.3.2",
+        "web-vitals": "^0.2.4"
+    },
+    "eslintConfig": {
+        "extends": [
+            "react-app",
+            "react-app/jest"
+        ]
+    },
+    "browserslist": {
+        "production": [
+            ">0.2%",
+            "not dead",
+            "not op_mini all"
+        ],
+        "development": [
+            "last 1 chrome version",
+            "last 1 firefox version",
+            "last 1 safari version"
+        ]
+    },
+    "devDependencies": {
+        "@tailwindcss/postcss7-compat": "^2.0.2",
+        "autoprefixer": "^9.8.6",
+        "postcss": "^7.0.35",
+        "prettier": "^2.2.1",
+        "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.0.2"
+    }
 }
